Correcció amb SonarQube